Add basic routing

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ code {
     monospace;
 }
 
-/* -------------------- NAV BAR & APP BODY --------------------  */
-.app-body {
+/* ------------------- NAV BAR & PAGE TITLES -------------------  */
+.page-title {
   padding: 40px;
 }
 
