--- a/src/index.css
+++ b/src/index.css
@@ -53,10 +53,17 @@ code {
 
 /* -------------------------- IMAGES -------------------------  */
 
+image-flex-container {
+  margin: auto;
+}
+
 .image-flex {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .single-image-container {
@@ -69,3 +76,29 @@ code {
   height:300px;
 }
 
+/* ------------------------ LOGIN / SIGNUP -----------------------  */
+
+.form-container {
+  margin-top: 20vh;
+}
+
+form {
+  max-width: 400px;
+  margin: auto;
+}
+
+form div {
+  margin-bottom: 20px;
+}
+form label {
+  margin-bottom: 15px;
+}
+form input {
+  width: 386px;
+  margin: auto;
+  padding: 5px;
+}
+
+input[type="submit" i] {
+  width: 400px;
+}
